Bug 363870 - An Editng of channel names ist not possible
Summary: An Editng of channel names ist not possible
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-03 00:07 UTC by tuxnix
Modified: 2016-06-09 08:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tuxnix 2016-06-03 00:07:20 UTC
kaffeine 2.01 on archlinux x86_64 4.5.4-1 plasma 5.6

Reproducible: Always

Steps to Reproduce:
1. Menu Television
2. Channels
3. Edit


Actual Results:  
There is no "OK" button.
Comment 1 Mauro Carvalho Chehab 2016-06-05 23:22:32 UTC
The buttons got lost during KF5 conversion. Re-added. You should now be able to see them with the latest development version. I'll be merging the fix on a yet-to-be-released version 2.0.2.
Comment 2 tuxnix 2016-06-09 08:08:51 UTC
Bug is fixed. Thank you. 
Tested with Kaffeine 2.0.2-1, plasma-desktop 5.6.4-1 on archlinux 4.6.1-2