dvbchanneldialog: Add OK/Cancel buttons at the channel edit box

The Ok/Cancel buttons got missed during the KF5 conversion.
Re-add them.

BUG: 363870

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>